# temper

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .mcp.json  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  alembic.ini  deploy.sh  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml  install-local.sh  install.sh  publish.sh  pyproject.toml  start.sh  update.sh
.forge/: mcp.json
.github/workflows/: release.yml
agents/smith/: .env.example  .gitignore  README.md  TODO.md  package.json  pnpm-lock.yaml  pyproject.toml  start.sh  tsconfig.json
agents/smith/.smith/prompts/: standup.md
agents/smith/.smith/skills/: example-mantis-bug-format.md
agents/smith/docs/: design.md  fortinet-mcp-servers.md  framework-comparison.md  pi-architecture.md  roadmap.md  security.md  smith-architecture.md
agents/smith/src/: approval-store.ts  config.ts  conversation-index.ts  index.ts  jobs-engine.ts  scheduler.ts  server.ts  session-manager.ts  temper.ts
agents/smith/src/db/: jobs-repo.ts  migrate_env_settings.ts  migrations.ts  secrets.ts  settings.ts  sqlite.ts
agents/smith/src/db/migrations/: 001_plugins_secrets.sql  002_settings.sql  003_jobs.sql
agents/smith/src/extensions/: approval-gate.ts  compaction-policy.ts  conv-waiting.ts  mcp-bridge.ts  plugin-event-listener.ts  plugin-system.ts  scheduled-jobs.ts  smith-personality.ts  temper-memory.ts  typed-memory.ts
agents/smith/src/lib/: fork-snippet.ts  tasks-aggregator.ts
agents/smith/src/plugins/: manager.ts  mcp.ts  migrate_env.ts  repository.ts  types.ts
agents/smith/src/smith/: __init__.py  __main__.py  agent.py  config.py  mcp.py  server.py  temper.py
agents/smith/src/web/: briefs.jsx  chat.jsx  plugins.jsx  settings.jsx  setup.jsx  shared.jsx  styles.css  tasks.jsx
benchmark/: grade-results.py  results-constraint-summary-20260420.md  run-benchmark.sh  run-module-benchmark.sh  setup-test-project.sh  test-cases.json  test-m3-m6.json  test-m7-m8.json
benchmark/results-20260407/: benchmark-report-final.md  benchmark-report.md  post-reddit.md  post-xiaohongshu.md  report.md  share-card.html
benchmark/results-FortiNAC-core_business_v2-20260407-161718/: report-cn.md  report.md
benchmark/results-FortiNAC-v2-20260407-180549/: report-cn.md  report.md
benchmark/results-FortiNAC-v3-20260407-185450/: report-cn.md  report.md
benchmark/results-constraint-arch-20260420/: EntityController.B.java  run.sh
benchmark/results-constraint-blocking-io-20260420/: DifferentAttributesWithLockAcquiredHandler.B-final.java  DifferentAttributesWithLockAcquiredHandler.pristine.java  report.md  run.sh
benchmark/results-constraint-comment-20260419/: EntityCache.A.java  EntityCache.B.java  report.md  report_edge.md  run_all.sh  run_edge.sh  score.py
benchmark/results-constraint-stale-20260420/: EntityCache.S1.java  EntityCache.S2.java  run.sh
benchmark/results-constraint-stale-arch-20260420/: report.md
docker/: entrypoint.sh  nginx-example.conf
docs/: Forge_Memory_Implementation_Plan.md  Forge_Memory_Layer_Design.docx  Forge_Strategy_Research_2026.docx  README.md  REFLECTION-v0.2.0.md  agent-integration-prompt.md  api-guide.md  api-reference.md  deploy-no-docker.md  deploy.md  extraction-quality-2026-05.md  memctl.md  memory-blocks.md  memory-frameworks-comparison.md  notes-primitive-proposal.md  permissions.md  v.05-pr.md  vision.md  xhs-post.md
docs/prototype/: code-graph.ts  graph-server.cjs  graph-worker.ts  graph.html  memory-mcp-server.ts
examples/: README.md  english_agent_chat.py  english_agent_minimal.py  graphiti_showcase.py
npm/temper/: README.md  package.json
npm/temper-cli/: package.json
npm/temper-darwin-arm64/: package.json
npm/temper-darwin-x64/: package.json
npm/temper-linux-x64/: package.json
scripts/: build-npm.sh  cleanup_memory.py  dev.sh  migrate.py  publish-npm.sh  start_embedding.sh  start_falkordb.sh  start_postgres.sh
scripts/test/: README.md  bench.py  extract.py  load.py  smoke.sh  walkthrough.sh
src/: main.rs
src/analysis/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/constraint/: check.rs  mod.rs  parser.rs  report.rs  scanner.rs
src/export/: mod.rs
src/graph/: mod.rs
src/mcp/: mod.rs
src/memory/: dedup.rs  extract.rs  mod.rs
src/memory_service/: config.py  logging_config.py  main.py  memctl.py  reset_password.py
src/modules/: interfaces.rs  mod.rs  registry.rs  suggest.rs
src/parser/: java.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/storage/: embedding.rs  local.rs  mod.rs
tests/: conftest.py
tests/integration/: test_api_key_scope.py  test_auth_flow.py  test_backups_api.py  test_bootstrap.py  test_community_build.py  test_documents_wikilinks.py  test_episode_flow.py  test_orgs_groups_flow.py  test_snapshots_flow.py  test_typed_memory_flow.py
(+388 files in other folders)
