[package]
name = "temper"
version = "0.2.0"
edition = "2021"
description = "Constraint lifecycle platform for source code — place, verify, and monitor TEMPER-CONSTRAINT comments"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# AST Parsing (used by graph scanner + HTML export)
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"

# Binary graph format
bincode = "1"

# Glob matching (module registry)
globset = "0.4"

# Constraint scanner
regex = "1"
once_cell = "1"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
