[package]
name = "temper"
version = "0.2.0"
edition = "2021"
description = "Constraint lifecycle for source code — place, verify, and monitor TEMPER-CONSTRAINT comments"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Constraint scanner regex + prose phrases
regex = "1"
once_cell = "1"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
