[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-service"
version = "0.1.0"
description = "Multi-tenant memory service for AI agents (self-hosted Zep alternative, Graphiti-backed)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jerry" }]
dependencies = [
  # Web framework
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",

  # Config and validation
  "pydantic>=2.6",
  "pydantic-settings>=2.2",

  # Database
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "aiosqlite>=0.20",  # for local dev / tests without Postgres

  # Auth
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",

  # Knowledge graph
  "graphiti-core>=0.3",
  "falkordb>=1.0",

  # LLM client
  "openai>=1.30",

  # Logging
  "structlog>=24.1",

  # HTTP client (for health check probes)
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "types-passlib",
]

[project.scripts]
memory-service = "memory_service.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]
